[package]
name = "rust-dsp"
version = "0.1.0"
authors = ["tipeter <piotr.tihanyi@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
gio = "0.5.1"
gtk = { version = "0.5.0", features = ["v3_22"] }
glib = "0.6.1"
gdk = "0.9.0"
cairo-rs = "0.5.0"
#gdk-sys = "0.7.0"
#cairo-rs = "0.5.0"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2.6"
